--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=postgres://postgres:pass@localhost:5555/encapsulate
+DATABASE_URL=postgres://haff:pass@localhost:5551/encapsulate
+RUST_BACKTRACE=1
+RUST_LOG=debug
