--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DATABASE_URL=postgres://haff:pass@localhost:5551/encapsulate
-RUST_BACKTRACE=1
-RUST_LOG=debug
+DATABASE_URL=postgres://postgres:pass@localhost:5551/encapsulate
+REDIS_URL=localhost:6379
+# RUST_BACKTRACE=1
+# RUST_LOG=debug
