--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 actix = "0.13.0"
-actix-identity = "0.4"
-actix-web = "4.0"
+actix-web = "4.2.1"
+actix-session = { version = "0.7", features = ["redis-actor-session"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
@@ -17,5 +17,6 @@ uuid = { version = "0.8.2", features = ["serde", "v4"] }
 diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
 diesel_migrations = "1.4.0"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn", "std", "serde"] }
-rust-argon2 = "1"
 derive_more = "0.99.5"
+rust-argon2 = "1"
+env_logger = "0.9"
